--- a/HTML_video点击播放事件/index.html
+++ b/HTML_video点击播放事件/index.html
@@ -11,7 +11,7 @@ li{ display:inline}
 .div-a{ float:top;width:220px;} 
 
 .div-b{ float:down;width:220px;} 
-.div-c{float:left;width:220px;}
+.div-c{float:left;width:220px;height:250px;}
 .div-d{float:left;width:20px;}
 </style>
 
